# recommendation-system-api

./: Dockerfile  README.md  main.py  pyproject.toml
data/02_processed/: market_basket_results.csv
models/: association_rules.pkl
notebooks/: 01_EDA.ipynb
src/: api.py  data_processing.py
